# Proiecte

C++ Simulare parcometru/Simulare_parcometru/: ATM.cpp  ATM.h  CMakeLists.txt  Colectie.cpp  Colectie.h  FileRepository.cpp  FileRepository.h  MyException.h  Parcare.cpp  Parcare.h  Pereche.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Teste.cpp  Teste.h  Tranzactie.cpp  Tranzactie.h  UI.cpp  UI.h  Validator.h  ValidatorException.h  VectorDinamic.cpp  VectorDinamic.h  main.cpp
JAVA-Cabinet stomatologic/demo/: pacienti.txt  programari.txt  settings.properties
JAVA-Cabinet stomatologic/demo/src/main/java/: module-info.java
JAVA-Cabinet stomatologic/demo/src/main/java/domain/: AbstractEntity.java  AbstractEntityConverter.java  Pacient.java  PacientConverter.java  Programare.java  ProgramareConverter.java
JAVA-Cabinet stomatologic/demo/src/main/java/exceptions/: DuplicateIDException.java  ObjectNotFoundException.java  RepositoryException.java
JAVA-Cabinet stomatologic/demo/src/main/java/repository/: BinaryFileRepository.java  IRepository.java  Repository.java  SQLPacientRepository.java  SQLProgramareRepository.java  TextFileRepository.java  cabinet_stomatologic.db
JAVA-Cabinet stomatologic/demo/src/main/java/service/: PacientService.java  ProgramareService.java
JAVA-Cabinet stomatologic/demo/src/main/java/ui/: ConsoleUI.java
JAVA-Cabinet stomatologic/demo/src/main/java/utils/: Settings.java
JAVA-Cabinet stomatologic/demo/src/main/tests/domain/: AbstractEntityTest.java  PacientConverterTest.java  PacientTest.java  (+2 more)
SQL-Spital/: Spital.sql
(+7 files in other folders)
